[gd_scene load_steps=32 format=3 uid="uid://capyu6svpbemf"]

[ext_resource type="Script" path="res://Scenes/entities/Player/Player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://c3a0cm0kg0p" path="res://Scenes/ui/hud/croshar.png" id="3"]
[ext_resource type="PackedScene" path="res://Scenes/ui/hud/HPPanel.tscn" id="5"]
[ext_resource type="PackedScene" path="res://Scenes/entities/Player/model/basicman.tscn" id="6"]
[ext_resource type="Script" path="res://Scenes/ui/hud/fpsdisplay.gd" id="7"]
[ext_resource type="Script" path="res://Scenes/entities/Player/FSM_player.gd" id="8"]
[ext_resource type="AudioStream" uid="uid://c04c4wo6fpfpq" path="res://Scenes/entities/Player/wallbounce.wav" id="9"]
[ext_resource type="Texture2D" uid="uid://f1agjiucyxmh" path="res://TextureAssets/pain-vignette.png" id="10"]
[ext_resource type="Shader" path="res://Scenes/entities/Player/pain_vignette.gdshader" id="11"]
[ext_resource type="AudioStream" uid="uid://dckmu6d41df7v" path="res://Scenes/entities/Player/sounds/hurt_-03.wav" id="12"]
[ext_resource type="AudioStream" uid="uid://byx8wi8uhd2vp" path="res://Scenes/entities/Player/sounds/hurt_-01.wav" id="13"]
[ext_resource type="AudioStream" uid="uid://bjx6u5evuqm0c" path="res://Scenes/entities/Player/sounds/hurt_-05.wav" id="14"]
[ext_resource type="AudioStream" uid="uid://baas1ghy21ja1" path="res://Scenes/entities/Player/jump.wav" id="14_ew0bd"]
[ext_resource type="AudioStream" uid="uid://c6p0olbwtxd2w" path="res://Scenes/entities/Player/sounds/hurt_-02.wav" id="15"]
[ext_resource type="AudioStream" uid="uid://vl5jkpcganj4" path="res://Scenes/entities/Player/sounds/hurt_-04.wav" id="16"]
[ext_resource type="AudioStream" uid="uid://ps84psp1xaxt" path="res://Scenes/entities/Player/sounds/death-01.wav" id="17"]
[ext_resource type="AudioStream" uid="uid://btgwoofnkk5pb" path="res://Scenes/entities/Player/sounds/death-04.wav" id="18"]
[ext_resource type="AudioStream" uid="uid://cr8d8lxb061je" path="res://Scenes/entities/Player/sounds/death-03.wav" id="19"]
[ext_resource type="AudioStream" uid="uid://bot05lt6r7mr3" path="res://Scenes/entities/Player/sounds/death-05.wav" id="20"]
[ext_resource type="AudioStream" uid="uid://cnwympyfgd8on" path="res://Scenes/entities/Player/sounds/death-02.wav" id="21"]
[ext_resource type="PackedScene" path="res://Scenes/ui/hud/playerlist.tscn" id="22"]
[ext_resource type="FontFile" uid="uid://rn6wffqj8a3p" path="res://TextureAssets/fonts/roboto/Roboto-Black.ttf" id="23"]
[ext_resource type="AudioStream" uid="uid://bigul0q78antl" path="res://Audio/shield_deflect2.wav" id="27"]
[ext_resource type="AudioStream" uid="uid://iiikt6bxwj2c" path="res://Scenes/entities/Player/sounds/crappier.wav" id="28"]
[ext_resource type="AudioStream" uid="uid://bm1u2mq5557ir" path="res://Audio/shield_deflect1.wav" id="29"]

[sub_resource type="FontFile" id="20"]
fallbacks = [ExtResource("23")]
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="GDScript" id="12"]
script/source = "extends Node3D

@export_category(\"Voices\")
@export var hurt_sounds = [AudioStream]
@export var death_sounds = [AudioStream]

@export_category(\"FX\")
@export var jump_sound = AudioStream
@export var wallbounce_sound = AudioStream
@export var shield_sounds = [AudioStream]
@export var shieldbreak_sounds = [AudioStream]

@export_category(\"Footsteps\")
@export var footstep_sounds_generic = [AudioStream]
@export var footstep_sounds_wood = [AudioStream]
@export var footstep_sounds_dirt = [AudioStream]
@export var footstep_sounds_metal = [AudioStream]
@export var footstep_sounds_water = [AudioStream]
"

[sub_resource type="CapsuleMesh" id="1"]
radius = 0.7

[sub_resource type="CapsuleShape3D" id="2"]
radius = 0.7

[sub_resource type="ShaderMaterial" id="14"]
shader = ExtResource("11")

[sub_resource type="GDScript" id="19"]
script/source = "extends TextureRect

var ouchiness = 1.0;

func _process(delta: float) -> void:
	get_material().set_shader_parameter('thresh', ouchiness)

var damagetween

func _on_Player_Damage(old, new) -> void:
	if abs(old - new) < 0.1:
		return
	var dur = (old/(max(0.1,new)) * 6)
	ouchiness = new/100
	if damagetween is Tween:
		damagetween.kill()
	damagetween = create_tween()
	damagetween.set_trans(Tween.TRANS_CIRC)
	damagetween.set_ease(Tween.EASE_OUT)
	damagetween.tween_property(self, 'ouchiness', 1.0, dur);
	pass # Replace with function body.
"

[node name="Player" type="CharacterBody3D" groups=["Players"]]
collision_layer = 2
collision_mask = 7
script = ExtResource("2")

[node name="nametag" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.7, 0)
pixel_size = 0.008
billboard = 1
text = "name"
font = SubResource("20")

[node name="projectiles" type="Node" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("8")

[node name="sounds" type="Node3D" parent="."]
script = SubResource("12")
hurt_sounds = [ExtResource("13"), ExtResource("15"), ExtResource("12"), ExtResource("16"), ExtResource("14")]
death_sounds = [ExtResource("17"), ExtResource("21"), ExtResource("19"), ExtResource("18"), ExtResource("20")]
jump_sound = ExtResource("14_ew0bd")
wallbounce_sound = ExtResource("9")
shield_sounds = [ExtResource("29"), ExtResource("27")]
shieldbreak_sounds = [ExtResource("28")]

[node name="stationary" type="Node" parent="sounds"]

[node name="jumps" type="AudioStreamPlayer3D" parent="sounds"]
unit_db = -12.0
unit_size = 2.0
max_db = 0.0
bus = &"Gameplay"
attenuation_filter_cutoff_hz = 20500.0
attenuation_filter_db = 0.0

[node name="hurt" type="AudioStreamPlayer3D" parent="sounds"]
max_db = 0.0
bus = &"Gameplay"
attenuation_filter_cutoff_hz = 20500.0
attenuation_filter_db = 0.0

[node name="footstep" type="AudioStreamPlayer3D" parent="sounds"]
bus = &"Gameplay"
attenuation_filter_db = 0.0

[node name="Capsule" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("1")

[node name="basicman" parent="." instance=ExtResource("6")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0.245365, -0.121447)
visible = false

[node name="capsulecollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("2")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19813, 0)

[node name="Holder" type="Node3D" parent="Head"]
transform = Transform3D(0.999519, 0, 0, 0, 0.999519, 0, 0, 0, 0.999519, 0.842409, -0.648897, -1.71594)

[node name="FloorCheck" type="RayCast3D" parent="."]
transform = Transform3D(1.81172, 0, 0, 0, 1, 0, 0, 0, 1.78498, 0, -0.827019, 0)

[node name="painvignette" type="TextureRect" parent="."]
modulate = Color(0.410156, 0.00961304, 0, 1)
material = SubResource("14")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("10")
stretch_mode = 1
script = SubResource("19")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="debug" type="Label" parent="HUD"]
offset_left = 25.0
offset_top = 427.0
offset_right = 65.0
offset_bottom = 441.0
text = "floor normal = "

[node name="Crosshair" type="TextureRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3")
stretch_mode = 6

[node name="HPPanel" parent="HUD" instance=ExtResource("5")]
anchors_preset = -1

[node name="Margin" parent="HUD/HPPanel" index="0"]
anchors_preset = 15
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="valign" parent="HUD/HPPanel/Margin" index="0"]
offset_right = 348.0
offset_bottom = 132.0

[node name="shieldmeter" parent="HUD/HPPanel/Margin/valign" index="0"]
offset_right = 348.0
offset_bottom = 64.0

[node name="icon" parent="HUD/HPPanel/Margin/valign/shieldmeter" index="0"]
offset_right = 64.0
offset_bottom = 64.0

[node name="ShieldBar" parent="HUD/HPPanel/Margin/valign/shieldmeter" index="1"]
offset_left = 68.0
offset_right = 348.0
offset_bottom = 64.0

[node name="Hbox" parent="HUD/HPPanel/Margin/valign" index="1"]
offset_top = 68.0
offset_right = 348.0
offset_bottom = 132.0

[node name="HP" parent="HUD/HPPanel/Margin/valign/Hbox" index="0"]
offset_right = 64.0
offset_bottom = 64.0

[node name="HpBar" parent="HUD/HPPanel/Margin/valign/Hbox" index="1"]
offset_left = 68.0
offset_right = 348.0
offset_bottom = 64.0

[node name="speeddisplay" type="Label" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -54.0
offset_right = 31.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
text = "h speed - w"

[node name="fpsdisplay" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -84.0
offset_top = 16.0
offset_right = -21.0
offset_bottom = 75.0
grow_horizontal = 0
grow_vertical = 0
text = "FPS: 60
client"
script = ExtResource("7")

[node name="playerlist" parent="HUD" instance=ExtResource("22")]
anchors_preset = 5
grow_horizontal = 2

[node name="networktick" type="Timer" parent="."]
wait_time = 0.017
autostart = true

[node name="respawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="shieldTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="changeHealth" from="." to="HUD/HPPanel" method="set_hp"]
[connection signal="changeShield" from="." to="HUD/HPPanel" method="set_shield"]
[connection signal="timeout" from="networktick" to="." method="_on_networktick_timeout"]
[connection signal="timeout" from="respawnTimer" to="." method="_on_respawnTimer_timeout"]
[connection signal="timeout" from="shieldTimer" to="." method="_on_shieldTimer_timeout"]

[editable path="HUD/HPPanel"]
